[package]
name = 'b64'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = ['staticlib']
name = 'b64'

[dependencies]
base64 = "0.21.7"
extendr-api = { version = "0.7.0", features = ["either"] }
itertools = "0.12.0"

[patch.crates-io]
libR-sys = { git = "https://github.com/extendr/libR-sys", rev = "976c56d396175f8d09548b0a1f0a77fc393018f2" }

[profile.release]
lto = true
codegen-units = 1
